fixed button gap size

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 #buttons-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr) ;
-    gap: 5px;
+    gap: 7px;
     padding: 5px;
     margin-bottom: 5px;
 }
